# citizen

./: .gitignore  AGENTS.md  Cargo.toml  README.md
api/: Cargo.toml  README.md
api/.openapi-generator/: FILES
api/docs/: Agent.md  AgentApi.md  AgentLocator.md  AgentPool.md  AgentPoolApi.md  AgentPoolLocator.md  AgentPools.md  AgentRequirement.md  AgentRequirements.md  AgentType.md  AgentTypeApi.md  AgentTypeLocator.md  AgentTypes.md  Agents.md  ApprovableBuild.md  ApprovalInfo.md  ArtifactDependencies.md  ArtifactDependency.md  ArtifactDownloadInfo.md  AuditAction.md  AuditApi.md  AuditEvent.md  AuditEvents.md  AuditLocator.md  AuthModule.md  AuthModules.md  AuthorizationTokensRequirements.md  AuthorizedInfo.md  AvatarApi.md  Branch.md  BranchLocator.md  BranchVersion.md  Branches.md  Build.md  BuildApi.md  BuildCancelRequest.md  BuildChange.md  BuildChanges.md  BuildExecutor.md  BuildLocator.md  (+222 more)
api/src/apis/: agent_api.rs  agent_pool_api.rs  agent_type_api.rs  audit_api.rs  avatar_api.rs  build_api.rs  build_queue_api.rs  build_type_api.rs  change_api.rs  cloud_instance_api.rs  configuration.rs  deployment_dashboard_api.rs  global_server_settings_api.rs  group_api.rs  health_api.rs  investigation_api.rs  mod.rs  mute_api.rs  node_api.rs  problem_api.rs  problem_occurrence_api.rs  project_api.rs  role_api.rs  root_api.rs  server_api.rs  server_authentication_settings_api.rs  test_api.rs  (+5 more)
src/: cli.rs  client.rs  config.rs  interactive.rs  main.rs
src/commands/: agent.rs  build.rs  mod.rs  project.rs  queue.rs  server.rs
src/output/: human.rs  mod.rs  table.rs
(+233 files in other folders)
