[package]
name = "citizen"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "api" }
clap = { version = "4", features = ["derive", "env", "color"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.3+spec-1.1.0"
tabled = { version = "0.20.0", features = ["ansi"] }
colored = "3.1.1"
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
